--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
         <div class="card-body">
             <img src=""  class="card-img-top">
           <h5>Titulo</h5>
-          <p>$</p>
+          <p>stock: <span>10</span></p>
+          <p>$ <span>10</span></p>
           <button class=" btn-dark btn-card-comprar">+</button>
         </div>
         
